--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -193,7 +193,7 @@
             </div>
             <div>
               <span class="content-tag">Software</span>
-              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
+              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...</h3>
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -211,7 +211,7 @@
             </div>
             <div>
               <span class="content-tag">Criptomoedas</span>
-              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...</h3>
+              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...</h3>
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -220,7 +220,7 @@
             </div>
             <div>
               <span class="content-tag">Drones</span>
-              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...</h3>
+              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...</h3>
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -234,7 +234,7 @@
           </article>
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 </html>
